--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "nvim"]
 	path = nvim
 	url = https://github.com/juanca37/nvim
+[submodule "tmux"]
+	path = tmux
+	url = https://github.com/juanca37/tmux
