--- a/zsh/.zsh_prompt.conf
+++ b/zsh/.zsh_prompt.conf
@@ -24,8 +24,8 @@ function git_prompt_information() {
             esac
         done <<< "$_status"
        
-        ahead=$(git rev-list --count HEAD..origin/$branch 2>/dev/null)
-        behind=$(git rev-list --count origin/$branch..HEAD 2>/dev/null)
+        behind=$(git rev-list --count HEAD..origin/$branch 2>/dev/null)
+        ahead=$(git rev-list --count origin/$branch..HEAD 2>/dev/null)
         
         # Format the status with counts for each category
         status_text=""
