--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -277,6 +277,8 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+# Custom (Save these)
+bind = $mainMod SHIFT, F4, exec, hyprshot -m region --clipboard-only
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
