--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -279,6 +279,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Custom (Save these)
 bind = $mainMod SHIFT, F4, exec, hyprshot -m region --clipboard-only
+bind = $mainModR, L, exec, hyprlock
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
