--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -2,20 +2,16 @@
     "layer": "top",
     "spacing": 0,
     "height": 0,
-
     "margin-top": 8,
     "margin-right": 8,
     "margin-bottom": 0,
     "margin-left": 8,
-
     "modules-left": [
-        "sway/workspaces"
+        "hyprland/workspaces"
     ],
-
     "modules-center": [
         "clock"
     ],
-
     "modules-right": [
         "tray",
         "cpu_text",
@@ -25,41 +21,33 @@
         "network",
         "pulseaudio"
     ],
-
     "sway/workspaces": {
         "disable-scroll": true,
         "all-outputs": true,
         "tooltip": false
     },
-
     "tray": {
         "spacing": 10,
         "tooltip": false
     },
-
     "clock": {
         "format": "{:%I:%M %p - %a, %d %b %Y}",
         "tooltip": false
     },
-
     "cpu": {
         "format": "cpu {usage}%",
         "interval": 2,
-
         "states": {
             "critical": 90
         }
     },
-
     "memory": {
         "format": "mem {percentage}%",
         "interval": 2,
-
         "states": {
             "critical": 80
         }
     },
-
     "battery": {
         "format": "bat {capacity}%",
         "interval": 5,
@@ -69,15 +57,13 @@
         },
         "tooltip": false
     },
-
     "network": {
-        "format-wifi" : "wifi {bandwidthDownBits}",
+        "format-wifi": "wifi {bandwidthDownBits}",
         "format-ethernet": "enth {bandwidthDownBits}",
-        "format-disconnected" : "no network",
+        "format-disconnected": "no network",
         "interval": 5,
         "tooltip": false
     },
-
     "pulseaudio": {
         "scroll-step": 5,
         "max-volume": 150,
