--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,7 +48,7 @@ $menu = wofi --show drun --allow-images
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar &
+exec-once = waybar & hyprpaper &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
