enabling bt on boot

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,7 +48,7 @@ $menu = wofi --show drun --allow-images
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & hyprpaper &
+exec-once = waybar & hyprpaper & bluetoothctl &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -182,7 +182,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 0
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
