--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -44,3 +44,6 @@ bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Split horizontally / Vertically
+bind = $mainMod, Y, togglesplit
