Changing hyprland cursor

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -49,15 +49,15 @@ $menu = wofi --show drun --allow-images
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar & hyprpaper & bluetoothctl &
-
+exec-once = hyprctl setcursor Bibata-Original-Classic 24
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+# env = XCURSOR_SIZE,24
+# env = HYPRCURSOR_SIZE,24
 
 
 #####################
