Adding MCP servers to VSCode config

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -27,4 +27,24 @@
     "editor.formatOnSave": true,
     "editor.fontLigatures": true,
     "diffEditor.ignoreTrimWhitespace": false,
+    // Agentic mode
+    "mcp": {
+        "servers": {
+            "github": {
+                "type": "http",
+                "url": "https://api.githubcopilot.com/mcp/",
+                "headers": {
+                    "Authorization": "Bearer ${input:github_mcp_pat}"
+                }
+            }
+        },
+        "inputs": [
+            {
+                "type": "promptString",
+                "id": "github_mcp_pat",
+                "description": "GitHub Personal Access Token",
+                "password": true
+            }
+        ]
+    }
 }
