feat: add wofi contextual project launcher and configuration - Add project-launcher.sh script with two-step selection - First select editor (VSCode, Nvim, Tmux) - Then select folder from ~/Configs or ~/Projects - Add wofi config file with sensible defaults - Fix shebang for NixOS compatibility - Add keybinding Super+Shift+P for project launcher - Enable case-insensitive search and visual folder indicators

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -47,3 +47,6 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Split horizontally / Vertically
 bind = $mainMod, Y, togglesplit
+
+# Project launcher contextual menu
+bind = $mainMod SHIFT, P, exec, ~/.config/hypr/project-launcher.sh
