--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -45,6 +45,10 @@
                     "-i",
                     "mcp/sequentialthinking"
                 ]
+            },
+            "context7": {
+                "type": "http",
+                "url": "https://mcp.context7.com/mcp"
             }
         },
         "inputs": [
