feat: add audio output device switcher with wofi - Create audio-switcher.sh script to switch between audio output devices - Uses wpctl (wireplumber) to list and switch audio sinks - Wofi interface for device selection with visual feedback - Shows current device with 🔊 icon and (current) label - Other devices shown with 🔇 icon - Desktop notifications for successful switches and errors - Add keybinding SUPER + Shift + A to launch audio switcher - Avoid conflict with existing SUPER + Shift + S (special workspace) - Script parses wpctl status output correctly for audio sinks

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -2,6 +2,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = $mainMod SHIFT, F4, exec, hyprshot -m region --clipboard-only
 bind = $mainMod SHIFT, L, exec, hyprlock
+bind = $mainMod SHIFT, A, exec, ~/.config/hypr/audio-switcher.sh
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, W, killactive,
