--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -3,6 +3,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod SHIFT, F4, exec, hyprshot -m region --clipboard-only
 bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod SHIFT, A, exec, ~/.config/hypr/audio-switcher.sh
+bind = $mainMod CTRL SHIFT, K, exec, ~/.config/hypr/shutdown.sh
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, W, killactive,
