--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -49,6 +49,17 @@
             "context7": {
                 "type": "http",
                 "url": "https://mcp.context7.com/mcp"
+            },
+            "mcp-obsidian": {
+                "command": "uv",
+                "args": [
+                    "tool",
+                    "run",
+                    "mcp-obsidian"
+                ],
+                "env": {
+                "OBSIDIAN_API_KEY": "${input:obsidian_api_key}"
+                }
             }
         },
         "inputs": [
@@ -56,6 +67,12 @@
                 "type": "promptString",
                 "id": "github_mcp_pat",
                 "description": "GitHub Personal Access Token",
+                "password": true
+            },
+            {
+                "type": "promptString",
+                "id": "obsidian_api_key",
+                "description": "Obsidian API Key",
                 "password": true
             }
         ]
