Adding nixcfg behavour to zsh check

--- a/zsh/.zsh_commands.conf
+++ b/zsh/.zsh_commands.conf
@@ -18,45 +18,80 @@ bindkey '^M' enter_behavior
 
 check_dotfiles_changes() {
   local dotfiles_dir="$HOME/Configs/Dotfiles"
+  local nixcfg_dir="$HOME/Configs/nixcfg"
   local red="\e[31m"
   local yellow="\e[33m"
   local cyan="\e[36m"
   local bold="\e[1m"
   local reset="\e[0m"
+  local has_alerts=false
   
-  if [ ! -d "$dotfiles_dir" ]; then
-    return
+  # Check main Dotfiles directory
+  if [ -d "$dotfiles_dir" ] && git -C "$dotfiles_dir" rev-parse --is-inside-work-tree >/dev/null 2>&1; then
+    local changes
+    changes=$(git -C "$dotfiles_dir" status --porcelain)
+    
+    local unpushed
+    unpushed=$(git -C "$dotfiles_dir" cherry -v @{upstream} 2>/dev/null)
+
+    if [ -n "$changes" ] || [ -n "$unpushed" ]; then
+      if [ "$has_alerts" = false ]; then
+        echo -e "\n${bold}${red}🚨 DOTFILES ALERT! 🚨${reset}"
+        has_alerts=true
+      fi
+      
+      echo -e "\n${bold}${cyan}📁 Main Dotfiles:${reset}"
+      echo -e "${yellow}Uncommitted or unpushed changes in your Dotfiles!${reset}"
+      
+      if [ -n "$changes" ]; then
+        echo -e "\n${cyan}📦 Uncommitted changes:${reset}"
+        git -C "$dotfiles_dir" status -s
+      fi
+
+      if [ -n "$unpushed" ]; then
+        echo -e "\n${cyan}🚀 Unpushed commits:${reset}"
+        git -C "$dotfiles_dir" cherry -v @{upstream}
+      fi
+      
+      echo -e "\n${yellow}Run this command:${reset}"
+      echo -e "  ${bold}cd ~/Configs/Dotfiles && git status${reset}"
+    fi
   fi
 
-  # Check if we're in a git repo
-  if ! git -C "$dotfiles_dir" rev-parse --is-inside-work-tree >/dev/null 2>&1; then
-    return
+  # Check nixcfg directory
+  if [ -d "$nixcfg_dir" ] && git -C "$nixcfg_dir" rev-parse --is-inside-work-tree >/dev/null 2>&1; then
+    local nix_changes
+    nix_changes=$(git -C "$nixcfg_dir" status --porcelain)
+    
+    local nix_unpushed
+    nix_unpushed=$(git -C "$nixcfg_dir" cherry -v @{upstream} 2>/dev/null)
+
+    if [ -n "$nix_changes" ] || [ -n "$nix_unpushed" ]; then
+      if [ "$has_alerts" = false ]; then
+        echo -e "\n${bold}${red}🚨 DOTFILES ALERT! 🚨${reset}"
+        has_alerts=true
+      fi
+      
+      echo -e "\n${bold}${cyan}❄️  NixOS Config:${reset}"
+      echo -e "${yellow}Uncommitted or unpushed changes in your NixOS config!${reset}"
+      
+      if [ -n "$nix_changes" ]; then
+        echo -e "\n${cyan}📦 Uncommitted changes:${reset}"
+        git -C "$nixcfg_dir" status -s
+      fi
+
+      if [ -n "$nix_unpushed" ]; then
+        echo -e "\n${cyan}🚀 Unpushed commits:${reset}"
+        git -C "$nixcfg_dir" cherry -v @{upstream}
+      fi
+      
+      echo -e "\n${yellow}Run this command:${reset}"
+      echo -e "  ${bold}cd ~/Configs/nixcfg && git status${reset}"
+    fi
   fi
-
-  # Check for changes
-  local changes
-  changes=$(git -C "$dotfiles_dir" status --porcelain)
   
-  # Check for unpushed commits
-  local unpushed
-  unpushed=$(git -C "$dotfiles_dir" cherry -v @{upstream} 2>/dev/null)
-
-  if [ -n "$changes" ] || [ -n "$unpushed" ]; then
-    echo -e "\n${bold}${red}🚨 DOTFILES ALERT! 🚨${reset}"
-    echo -e "${yellow}Uncommitted or unpushed changes in your Dotfiles!${reset}"
-    
-    if [ -n "$changes" ]; then
-      echo -e "\n${cyan}📦 Uncommitted changes:${reset}"
-      git -C "$dotfiles_dir" status -s
-    fi
-
-    if [ -n "$unpushed" ]; then
-      echo -e "\n${cyan}🚀 Unpushed commits:${reset}"
-      git -C "$dotfiles_dir" cherry -v @{upstream}
-    fi
-    
-    echo -e "\n${yellow}Run this command:${reset}"
-    echo -e "  ${bold}cd ~/Dotfiles && git status${reset}\n"
+  if [ "$has_alerts" = true ]; then
+    echo ""
   fi
 }
 
