Hyprland now goes directly into lock screen

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,6 +48,7 @@ $menu = wofi --show drun --allow-images --height 50% --width 50%
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once = hyprlock
 exec-once = waybar & hyprpaper & bluetoothctl &
 exec-once = hyprctl setcursor Bibata-Original-Classic 24
 #############################
