Adding calendar on clock hover

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -15,7 +15,6 @@
     ],
     "modules-right": [
         "tray",
-        
         "cpu_text",
         "network",
         "custom/audio-device",
@@ -43,7 +42,23 @@
     },
     "clock": {
         "format": "{:%I:%M %p - %a, %d %b %Y}",
-        "tooltip": false
+        "tooltip": true,
+        "tooltip-format": "<tt><small>{calendar}</small></tt>",
+        "calendar": {
+            "mode": "month",
+            "mode-mon-col": 3,
+            "weeks-pos": "right",
+            "format": {
+                "months": "<span color='#ffead3'><b>{}</b></span>",
+                "days": "<span color='#ecc6d9'>{}</span>",
+                "weeks": "<span color='#99ffdd'><b>W{}</b></span>",
+                "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+                "today": "<span color='#ff6699'><b><u>{}</u></b></span>"
+            }
+        },
+        "actions": {
+            "on-click-right": "mode"
+        }
     },
     "network": {
         "format-wifi": "wifi {bandwidthDownBits}",
