--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,8 +9,9 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.tmux.conf
 
 # switch panes using vim motions
 bind -r h select-pane -L
@@ -18,8 +19,14 @@ bind -r l select-pane -R
 bind -r k select-pane -U
 bind -r j select-pane -D
 
+# Create new window with name prompt (Ctrl-a + Ctrl-n)
+bind C-n command-prompt -p "Window name (Enter for folder name):" -I "#{b:pane_current_path}" "new-window -n '%1'"
+
 # Use local theme file
 source-file ~/.theme.conf
 
 # Put status bar on top
 set-option -g status-position top
+
+# set-window-option -g automatic-rename off
+# set-option -g allow-rename off 
