Adding a new script to manage my todo list

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -4,6 +4,8 @@ bind = $mainMod SHIFT, F4, exec, hyprshot -m region --clipboard-only
 bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod SHIFT, A, exec, ~/.config/hypr/audio-switcher.sh
 bind = $mainMod SHIFT, H, exec, ~/.config/hypr/shortcuts-help.sh
+bind = $mainMod, T, exec, ~/.config/hypr/todo-add.sh add
+bind = $mainMod SHIFT, T, exec, ~/.config/hypr/todo-add.sh view
 bind = $mainMod CTRL SHIFT, K, exec, ~/.config/hypr/power-menu.sh
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, R, exec, $menu
