--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -6,7 +6,7 @@ bind = $mainMod SHIFT, A, exec, ~/.config/hypr/audio-switcher.sh
 bind = $mainMod SHIFT, H, exec, ~/.config/hypr/shortcuts-help.sh
 bind = $mainMod, T, exec, ~/.config/hypr/todo-add.sh add
 bind = $mainMod SHIFT, T, exec, ~/.config/hypr/todo-add.sh view
-bind = $mainMod CTRL SHIFT, K, exec, ~/.config/hypr/power-menu.sh
+bind = $mainMod SHIFT, K, exec, ~/.config/hypr/power-menu.sh
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, W, killactive,
