Adding spotify menu to wofi dmenu

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -6,7 +6,7 @@ bind = $mainMod SHIFT, A, exec, ~/.config/hypr/audio-switcher.sh
 bind = $mainMod SHIFT, H, exec, ~/.config/hypr/shortcuts-help.sh
 bind = $mainMod, T, exec, ~/.config/hypr/todo-add.sh add
 bind = $mainMod SHIFT, T, exec, ~/.config/hypr/todo-add.sh view
-bind = $mainMod SHIFT, K, exec, ~/.config/hypr/power-menu.sh
+bind = $mainMod CTRL SHIFT, K, exec, ~/.config/hypr/power-menu.sh
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, W, killactive,
@@ -55,3 +55,5 @@ bind = $mainMod, Y, togglesplit
 
 # Project launcher contextual menu
 bind = $mainMod SHIFT, P, exec, ~/.config/hypr/project-launcher.sh
+
+bind = $mainMod SHIFT, M, exec, ~/.config/hypr/spotify-menu.sh
