--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,8 +23,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
+monitor=DP-1,3440x1440,0x0,1
+monitor=HDMI-A-1,1920x1080,3440x0,1,transform,1
 
 ###################
 ### MY PROGRAMS ###
