Adjusting monitor for desktp

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,9 +23,13 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1,3440x1440,0x0,1
-monitor=HDMI-A-1,1920x1080,3440x0,1,transform,1
+monitor=DP-1,3440x1440,1080x0,1
+monitor=HDMI-A-1,1920x1080,0x0,1,transform,3
 
+workspace=1,monitor:HDMI-A-1,default:true
+workspace=2,monitor:DP-1,default:true
+workspace=3,monitor:HDMI-A-1
+workspace=4,monitor:DP-1
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -228,7 +232,6 @@ bind = $mainMod, mouse_up, workspace, e-1
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
-
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
