--- a/zsh/.zsh_commands.conf
+++ b/zsh/.zsh_commands.conf
@@ -4,7 +4,7 @@ function enter_behavior() {
         if git rev-parse --is-inside-work-tree &>/dev/null; then
             git status
         else
-            eza -lah --color=auto
+		script -q /dev/null eza -lah --color=auto
         fi
         zle reset-prompt 
     else zle accept-line
@@ -17,8 +17,8 @@ bindkey '^M' enter_behavior
 
 
 check_dotfiles_changes() {
-  local dotfiles_dir="$HOME/Configs/Dotfiles"
-  local nixcfg_dir="$HOME/Configs/nixcfg"
+  local dotfiles_dir="$HOME/Dotfiles"
+  local nixcfg_dir="$HOME/nixcfg"
   local red="\e[31m"
   local yellow="\e[33m"
   local cyan="\e[36m"
